# Standard-to-md

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.json  pyproject.toml  requirements.txt  setup.py
docs/: API.md  CONTRIBUTING.md
examples/: basic_extraction.py  custom_pipeline.py  llm_training_data.py
src/: __init__.py  __main__.py  extractor.py  formatter.py  pipeline.py  processor.py
tests/: __init__.py  test_extractor.py  test_formatter.py  test_processor.py
